--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             border-collapse: separate;
             border-spacing: 5px;
             font-family: arial, sans-serif;
-            width: 50%;
+            width: 400px;
         }
 
         td,
@@ -28,6 +28,70 @@
         .space{
             background-color: white;
         }
+
+        /* #cube1 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: 0px 0px;
+        }
+        #cube2 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -100px 0px;
+        }
+        #cube3 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -200px 0px;
+        }
+        #cube4 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -300px 0px;
+        }
+        #cube5 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: 0px -100px;
+        }
+        #cube6 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -100px -100px;
+        }
+        #cube7 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -200px -100px;
+        }
+        #cube8 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -300px -100px;
+        }
+        #cube9 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: 0px -200px;
+        }
+        #cube10 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -100px -200px;
+        }
+        #cube11 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -200px -200px;
+        }
+        #cube12 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -300px -200px;
+        }
+        #cube13 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: 0px -300px;
+        }
+        #cube14 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -100px -300px;
+        }
+        #cube15 {
+            background-image: url("https://assets.stickpng.com/thumbs/584df37c6a5ae41a83ddee05.png");
+            background-position: -200px -300px;
+        } */
+
+
+
 
 
  
