--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding: 20px;
             height: 45px;
             text-align: center;
-            background-color: red;
+            background-color: purple;
         }
 
         .space{
