fixed animation errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         /* rollIn
 rollOut */
 
+
         #main {
             width: 250px;
             margin: 0 auto;
@@ -36,6 +37,13 @@ rollOut */
 
         .space {
             background-color: white;
+        }
+
+        .cancelAnimation {
+            -webkit-transition: none !important;
+            -moz-transition: none !important;
+            -o-transition: none !important;
+            transition: none !important;
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
