--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@ rollOut */
 
         <br><br>
         <button id="startBtn">Start</button> <button id="shuffle">Shuffle</button>
+        
+        <br>
+        <p id="timer"></p>
+        <audio id="audio" loop>
+            <source src="./assets/audio/clock.mp3" type="audio/mpeg">
+        </audio>
     </div>
 
     <table class="animate__animated" id="myTable">
@@ -72,5 +78,4 @@ rollOut */
     </table>
 </body>
 <script src="./assets/js/script.js"></script>
-
 </html>
