css changes from dave

--- a/index.html
+++ b/index.html
@@ -5,47 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        /* rollIn
-rollOut */
-
-
-        #main {
-            width: 250px;
-            margin: 0 auto;
-            padding: 30px;
-        }
-
-        table {
-            margin: 0 auto;
-            border-collapse: separate;
-            border-spacing: 5px;
-            font-family: arial, sans-serif;
-            width: 400px;
-        }
-
-        td,
-        th {
-            color: chartreuse;
-            border: 3px solid black;
-            text-align: left;
-            padding: 20px;
-            height: 45px;
-            text-align: center;
-            background-color: purple;
-        }
-
-        .space {
-            background-color: white;
-        }
-
-        .cancelAnimation {
-            -webkit-transition: none !important;
-            -moz-transition: none !important;
-            -o-transition: none !important;
-            transition: none !important;
-        }
-    </style>
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
